<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Scratch</string>
    <string name="scratch_string">scratch</string>
    <string name="image">image</string>
    <string name="partial_icon">partial_icon</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="please_login_to_continues">Please login to continues.</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email_address">Email address</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="new_to_scratch">New to Scratch?</string>
    <string name="create_account_here">Create Account Here</string>
    <string name="start_from_scratch">Start\nfrom Scratch</string>
    <string name="create_account_to_continue">Create account to continue.</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="already_have_a_account">Already have a account?</string>
    <string name="login_here">Login Here</string>
</resources>